--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
 		<div class="text">
 			<h5>Ann Adams</h5>
 			<blockquote>
-				Just wanted to say thank you for everything.
-Everyone loved loved the cake and said how delicious it was.
+				Just wanted to say thank you for everything. Everyone loved loved the cake and said how delicious it was.
 			</blockquote>
 		</div>
 	</section>
