html structure in progress

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header class="header">
 		<div class="container">
-			<a href="index.html"><img src="logo.png" alt="Cake Logo"></a>
+			<a href="index.html"><img src="images/logo.png" alt="Cake Logo"></a>
 			<nav class="nav">
 				<ul class="unstyle-list">
 					<li><a href="">CHOOSE CAKE</a></li>
@@ -23,65 +23,89 @@
 	</header>
 
 	<section class="section-hero js-hero-slider">
-		<div class="section-hero-slide" style="background-image: url('images/hero_slide_1.jpg');">
+
+		<div class="section-hero-slide" style="background-image: url('images/hero_slide_1.png');">
 			<h4>LIFE IS SWEET</h4>
 			<h1>Welcome to our Cake Shop</h1>
-			<a href="">Order now</a>
+			<a href="#">Order now</a>
+		</div>
+
+		<div class="section-hero-slide" style="background-image: url('images/hero_slide_2.png');">
+			<h4>LIFE IS SWEET</h4>
+			<h1>Life is short, eat cookies</h1>
+			<a href="#">Order now</a>
+		</div>
+
+		<div class="section-hero-slide" style="background-image: url('images/hero_slide_3.png');">
+			<h4>LIFE IS SWEET</h4>
+			<h1>We’ ll Make Memories Sweeter</h1>
+			<a href="#">Order now</a>
 		</div>
 	</section>
 
-	<section class="choose-one-for-you">
+	<section class="section-choose">
 		<div class="container">
 			<h2>CHOOSE ONE FOR YOU</h2>
-				<div class="image">
-					<a href="index.html"><img src="images/cake_1.png" alt=""></a>
-					<div class="title">
-						<h4>Chocolate gateau</h4>
-						<p>A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.</p>
-						<span>$35</span>
-					</div>
+			<a href="#" class="section-choose-box">
+				<div class="section-choose-img">
+					<img src="images/cake_1.png" alt="">
+					<span class="section-choose-img-text">Order now</span>
 				</div>
-
-				<div class="image">
-					<a href="index.html"><img src="images/cake_2.png" alt=""></a>
+				<div class="section-choose-text">
+					<h4>Chocolate gateau</h4>
+					<p>A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.</p>
+					<span>$35</span>
 				</div>
-					<div class="title">
-						<h4>Health cake</h4>
-						<p>This delicious cake is made with wholemeal flour, raw sugar and vegetable oil and packed with nutritious sultanas, sunflower seeds, honey and flaked almonds.</p>
-						<span>$5</span>
-					</div>
-
-				<div class="image">
-					<a href="index.html"><img src="images/cake_3.png" alt=""></a>
+			</a>
+			<a href="#" class="section-choose-box">
+				<div class="section-choose-img">
+					<img src="images/cake_2.png" alt="">
+					<span class="section-choose-img-text">Order now</span>
 				</div>
-					<div class="title">
-						<h4>Health cake</h4>
-						<p>Our elegantly decorated butter cream varieties are the perfect indulgence for your wedding or other special event.</p>
-						<span>$30</span>
-					</div>
-
-				<div class="image">
-					<a href="index.html"><img src="images/cake_4.png" alt=""></a>
-					<div class="title">
-						<h4>Mixed berry mousse cake</h4>
-						<p>Our pretty mixed berry mousse cake has a light texture and sweet fruity flavor. Topped with a strawberry glaze and a generous handful of fresh berries.</p>
-						<span>$30</span>
-					</div>
+				<div class="section-choose-text">
+					<h4>Health cake</h4>
+					<p>This delicious cake is made with wholemeal flour, raw sugar and vegetable oil and packed with nutritious sultanas, sunflower seeds, honey and flaked almonds.</p>
+					<span>$5</span>
 				</div>
-
+			</a>
+			<a href="#" class="section-choose-box">
+				<div class="section-choose-img">
+					<img src="images/cake_3.png" alt="">
+					<span class="section-choose-img-text">Order now</span>
+				</div>
+				<div class="section-choose-text">
+					<h4>Teal butter cream cupcake</h4>
+					<p>Our elegantly decorated butter cream varieties are the perfect indulgence for your wedding or other special event.</p>
+					<span>$18</span>
+				</div>
+			</a>
+			<a href="#" class="section-choose-box">
+				<div class="section-choose-img">
+					<img src="images/cake_4.png" alt="">
+					<span class="section-choose-img-text">Order now</span>
+				</div>
+				<div class="section-choose-text">
+					<h4>Mixed berry mousse cake</h4>
+					<p>Our pretty mixed berry mousse cake has a light texture and sweet fruity flavor. Topped with a strawberry glaze and a generous handful of fresh berries.</p>
+					<span>$30</span>
+				</div>
+			</a>
 		</div>
 	</section>
 
-	<section class="about-us">
+	<section class="section-about">
 		<div class="container">
 			<h3>ABOUT US</h3>
-			<div class="image">
-				<img src="images/cake_chef.png">
-			<div class="text">
+			<div class="section-about-box">
+				<div class="section-about-box-img">
+					<img src="images/cake_chef.png">
+				</div>
+			</div>
+			<div class="section-about-text">
 				<p>Cookies and cakes according to our grandmother's recipes. We use only natural ingredients, bought from domestic producers.</p>
 				<p>The milk that we put in the cakes is given by cows from mountain pastures. Only natural sweeteners are used, without processing. Also, we use only organic flour.</p>
 				<p>In our Cake Shop, everything is healthy, tasty and sweet. Come and see for yourself!</p>
-				<img src="images/cupcake.png">
+				<img class="section-about-text-img" src="images/cupcake.png">
 			</div>
 		</div>
 	</section>
@@ -100,26 +124,57 @@
 		<div class="images">
 			<a href="index.html"><img src="images/image_1.png"></a>
 			<a href="index.html"><img src="images/image_2.png"></a>
-			<a href="index.html"><img src=""></a>
-			<a href="index.html"><img src=""></a>
-			<a href="index.html"><img src=""></a>
-			<a href="index.html"><img src=""></a>
-			<a href="index.html"><img src=""></a>
-			<a href="index.html"><img src=""></a>
+			<a href="index.html"><img src="images/image_3.png"></a>
+			<a href="index.html"><img src="images/image_4.png"></a>
+			<a href="index.html"><img src="images/image_5.png"></a>
+			<a href="index.html"><img src="images/image_6.png"></a>
+			<a href="index.html"><img src="images/image_7.png"></a>
+			<a href="index.html"><img src="images/image_8.png"></a>
 		</div>
 	</section>
 
 	<section class="testimonials">
-		<h3>TESTIMONIALS</h3>
-		<div class="text">
-			<h5>Ann Adams</h5>
-			<blockquote>
+		<div class="section-testimonial-slide"
+			<h3>TESTIMONIALS</h3>
+			<div class="text">
+				<h5>Ann Adams</h5>
+				<blockquote>
 				Just wanted to say thank you for everything. Everyone loved loved the cake and said how delicious it was.
-			</blockquote>
+				</blockquote>
+			</div>
 		</div>
 	</section>
 
-
-
 </body>
+<!--End of body-->
+
+<footer>
+	<div class="container">
+		<div class="logo">
+			<a href="index.html"><img src="images/logo.png"></a>
+		</div>
+
+		<div class="contact-us">
+			<h5>Contact Us</h5>
+			<p>Christopher Street <br>New York City,  NY 100012</p>
+			<p>Phone number: (212) 509-6995</p>
+			<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="images/contact.png"></a>
+			<img src="images/contact.png">
+		</div>
+
+		<div class="our-working-hours">
+			<h5>Our Working Hours</h5>
+			<p><b>Monday - Friday</b> <br>8am - 9pm</p>
+			<p><b>Saturday - Sunday</b> <br>8am - 4pm</p>
+		</div>
+
+		<div class="follow-us">
+			<h5>Follow Us</h5>
+			<a href="index.html"> <img src="images/facebook.png">
+			<a href="index.html"> <img src="images/instagram.png">
+			<a href="index.html"> <img src="images/twitter.png">
+			<a href="index.html"> <img src="images/pinterest-p.png">
+		</div>
+	</div>
+</footer>
 </html>
