--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Cake Shop web page</title>
-		<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,600,700|Rochester" rel="stylesheet">
-	</head>
-	<body>
+<!doctype html>
+<html class="no-js" lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Cake Shop web page</title>
+  <meta name="description" content="We offer good and quality food">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link href="link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,600i,700|Rochester" rel="stylesheet">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
 		<header class="header">
 			<div class="container">
 				<a href="index.html"><img src="images/logo.png" alt="Cake Logo"></a>
@@ -110,10 +123,10 @@
 				</div>
 			</section>
 
-			<section class="gallery">
+			<section class="section-gallery">
 				<div class="container">
 					<h3>GALLERY</h3>
-					<div class="tabs">
+					<div class="section-tabs">
 						<a href="index.html">Most Popular</a>
 						<a href="index.html">Wedding</a>
 						<a href="index.html">Kids</a>
@@ -121,19 +134,19 @@
 					</div>
 				</div>
 
-				<div class="images">
-					<a href="index.html"><img src="images/image_1.png"></a>
-					<a href="index.html"><img src="images/image_2.png"></a>
-					<a href="index.html"><img src="images/image_3.png"></a>
-					<a href="index.html"><img src="images/image_4.png"></a>
-					<a href="index.html"><img src="images/image_5.png"></a>
-					<a href="index.html"><img src="images/image_6.png"></a>
-					<a href="index.html"><img src="images/image_7.png"></a>
-					<a href="index.html"><img src="images/image_8.png"></a>
+				<div class="section-images">
+					<a href="#"><img src="images/image_1.png"></a>
+					<a href="#"><img src="images/image_2.png"></a>
+					<a href="#"><img src="images/image_3.png"></a>
+					<a href="#"><img src="images/image_4.png"></a>
+					<a href="#"><img src="images/image_5.png"></a>
+					<a href="#"><img src="images/image_6.png"></a>
+					<a href="#"><img src="images/image_7.png"></a>
+					<a href="#"><img src="images/image_8.png"></a>
 				</div>
 			</section>
 
-			<section class="testimonials">
+			<section class="section-testimonials">
 				<div class="section-testimonial-slide"
 					<h3>TESTIMONIALS</h3>
 					<div class="text">
@@ -149,7 +162,7 @@
 		<footer>
 			<div class="container">
 				<div class="logo">
-					<a href="index.html"><img src="images/logo.png"></a>
+					<a href="#"><img src="images/logo.png"></a>
 				</div>
 
 				<div class="contact-us">
@@ -160,7 +173,7 @@
 					<img src="images/contact.png">
 				</div>
 
-				<div class="our-working-hours">
+				<div class="working-hours">
 					<h5>Our Working Hours</h5>
 					<p><b>Monday - Friday</b> <br>8am - 9pm</p>
 					<p><b>Saturday - Sunday</b> <br>8am - 4pm</p>
@@ -168,12 +181,18 @@
 
 				<div class="follow-us">
 					<h5>Follow Us</h5>
-					<a href="index.html"> <img src="images/facebook.png">
-					<a href="index.html"> <img src="images/instagram.png">
-					<a href="index.html"> <img src="images/twitter.png">
-					<a href="index.html"> <img src="images/pinterest-p.png">
+					<a href="#"> <img src="images/facebook.png">
+					<a href="#"> <img src="images/instagram.png">
+					<a href="#"> <img src="images/twitter.png">
+					<a href="#"> <img src="images/pinterest-p.png">
 				</div>
 			</div>
+
+	<script src="js/vendor/modernizr-3.6.0.min.js"></script>
+	  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+	  <script src="js/plugins.js"></script>
+	  <script src="js/main.js"></script>
 		</footer>
 
 	</body>
