footer in progress

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 				<a href="index.html"><img src="images/logo.png" alt="Cake Logo"></a>
 				<nav class="nav">
 					<ul class="unstyle-list">
-						<li><a href="">CHOOSE CAKE</a></li>
-						<li><a href="">ABOUT</a></li>
-						<li><a href="">GALLERY</a></li>
-						<li><a href="">TESTIMONIALS</a></li>
+						<li><a href="#">CHOOSE CAKE</a></li>
+						<li><a href="#">ABOUT</a></li>
+						<li><a href="#">GALLERY</a></li>
+						<li><a href="#">TESTIMONIALS</a></li>
 					</ul>
-					<a href="">CONTACT US</a>
+					<a href="#">CONTACT US</a>
 				</nav>
 				<button class="burger"></button>
 			</div>
@@ -114,6 +114,7 @@
 							<img src="images/cake_chef.png">
 						</div>
 					</div>
+
 					<div class="section-about-text">
 						<p>Cookies and cakes according to our grandmother's recipes. We use only natural ingredients, bought from domestic producers.</p>
 						<p>The milk that we put in the cakes is given by cows from mountain pastures. Only natural sweeteners are used, without processing. Also, we use only organic flour.</p>
@@ -152,7 +153,7 @@
 					<div class="text">
 						<h5>Ann Adams</h5>
 						<blockquote>
-						Just wanted to say thank you for everything. Everyone loved loved the cake and said how delicious it was.
+						<i>Just wanted to say thank you for everything. Everyone loved loved the cake and said how delicious it was.</i>
 						</blockquote>
 					</div>
 				</div>
@@ -160,7 +161,7 @@
 		</main>
 
 		<footer>
-			<div class="container">
+			<div class="page-footer">
 				<div class="logo">
 					<a href="#"><img src="images/logo.png"></a>
 				</div>
@@ -169,8 +170,9 @@
 					<h5>Contact Us</h5>
 					<p>Christopher Street <br>New York City,  NY 100012</p>
 					<p>Phone number: (212) 509-6995</p>
-					<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="images/contact.png"></a>
-					<img src="images/contact.png">
+					<address>
+						<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="images/contact.png"></a>
+					</address>				
 				</div>
 
 				<div class="working-hours">
@@ -186,6 +188,13 @@
 					<a href="#"> <img src="images/twitter.png">
 					<a href="#"> <img src="images/pinterest-p.png">
 				</div>
+
+			</div>
+
+			<div class="footer-copyright">
+				<div class="container">
+					© 2014 Copyright Text
+				</div>
 			</div>
 
 	<script src="js/vendor/modernizr-3.6.0.min.js"></script>
@@ -193,6 +202,7 @@
 	  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
 	  <script src="js/plugins.js"></script>
 	  <script src="js/main.js"></script>
+
 		</footer>
 
 	</body>
