--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+	<body>
 		<header class="header">
 			<div class="container">
 				<a href="index.html"><img src="images/logo.png" alt="Cake Logo"></a>
@@ -148,63 +148,61 @@
 			</section>
 
 			<section class="section-testimonials">
-				<div class="section-testimonial-slide"
-					<h3>TESTIMONIALS</h3>
-					<div class="text">
-						<h5>Ann Adams</h5>
-						<blockquote>
-						<i>Just wanted to say thank you for everything. Everyone loved loved the cake and said how delicious it was.</i>
+				<h3>TESTIMONIALS</h3>
+				<div class="section-testimonial-slider">
+					<div class="testimonials-slide">
+						<h5 class="testimonials-slide-title">Ann Adams</h5>
+						<blockquote class="testimonials-slide-text">
+							<i>Just wanted to say thank you for everything. Everyone loved loved the cake and said how delicious it was.</i>
 						</blockquote>
 					</div>
 				</div>
 			</section>
 		</main>
 
-		<footer>
-			<div class="page-footer">
-				<div class="logo">
+		<footer class="footer">
+			<div class="container">
+				<div class="footer-box footer-logo">
 					<a href="#"><img src="images/logo.png"></a>
 				</div>
 
-				<div class="contact-us">
-					<h5>Contact Us</h5>
-					<p>Christopher Street <br>New York City,  NY 100012</p>
-					<p>Phone number: (212) 509-6995</p>
+				<div class="footer-box contact-us">
+					<h5 class="footer-box-title">Contact Us</h5>
 					<address>
+						<p>Christopher Street <br>New York City,  NY 100012</p>
+						<p>Phone number: (212) 509-6995</p>
 						<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="images/contact.png"></a>
 					</address>				
 				</div>
 
-				<div class="working-hours">
-					<h5>Our Working Hours</h5>
+				<div class="footer-box working-hours">
+					<h5 class="footer-box-title">Our Working Hours</h5>
 					<p><b>Monday - Friday</b> <br>8am - 9pm</p>
 					<p><b>Saturday - Sunday</b> <br>8am - 4pm</p>
 				</div>
 
-				<div class="follow-us">
-					<h5>Follow Us</h5>
-					<a href="#"> <img src="images/facebook.png">
-					<a href="#"> <img src="images/instagram.png">
-					<a href="#"> <img src="images/twitter.png">
-					<a href="#"> <img src="images/pinterest-p.png">
+				<div class="footer-box follow-us">
+					<h5 class="footer-box-title">Follow Us</h5>
+					<a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png"></a>
+					<a href="#" target="_blank"><img src="images/instagram.png"></a>
+					<a href="#" target="_blank"><img src="images/twitter.png"></a>
+					<a href="#" target="_blank"><img src="images/pinterest-p.png"></a>
 				</div>
 
 			</div>
 
 			<div class="footer-copyright">
-				<div class="container">
+				<small class="footer-copyright-text">
 					© 2014 Copyright Text
-				</div>
+				</small>
 			</div>
-
-	<script src="js/vendor/modernizr-3.6.0.min.js"></script>
-	  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-	  <script src="js/plugins.js"></script>
-	  <script src="js/main.js"></script>
-
 		</footer>
-
+		<!-- Scripts placed at the end of body for faster site load -->
+		<script src="js/vendor/modernizr-3.6.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+		<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 	<!--End of body-->
 </html>
