--- a/index.html
+++ b/index.html
@@ -156,6 +156,18 @@
 							<i>Just wanted to say thank you for everything. Everyone loved loved the cake and said how delicious it was.</i>
 						</blockquote>
 					</div>
+					<div class="testimonials-slide">
+						<h5 class="testimonials-slide-title">Kelly Smith</h5>
+						<blockquote class="testimonials-slide-text">
+							<i>The cake you made for our wedding was even more beautiful than we imagined. Thank you for making our dream come true</i>
+						</blockquote>
+					</div>
+					<div class="testimonials-slide">
+						<h5 class="testimonials-slide-title">John Lawson</h5>
+						<blockquote class="testimonials-slide-text">
+							<i>Words cannot express how grateful we are to you. The cake you make our sons first birthday was amazing.</i>
+						</blockquote>
+					</div>
 				</div>
 			</section>
 		</main>
