added new files

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Cake Shop web page</title>
+  <title>Cake shop</title>
   <meta name="description" content="We offer good and quality food">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
-  <link href="link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,600i,700|Rochester" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -21,7 +19,7 @@
 	<body>
 		<header class="header">
 			<div class="container">
-				<a href="index.html"><img src="images/logo.png" alt="Cake Logo"></a>
+				<a href="index.html"><img src="img/logo.png" alt="Cake Logo"></a>
 				<nav class="nav">
 					<ul class="unstyle-list">
 						<li><a href="#">CHOOSE CAKE</a></li>
@@ -37,19 +35,19 @@
 		<main class="main">
 			<section class="section-hero js-hero-slider">
 
-				<div class="section-hero-slide" style="background-image: url('images/hero_slide_1.png');">
+				<div class="section-hero-slide" style="background-image: url('img/hero_slide_1.png');">
 					<h4>LIFE IS SWEET</h4>
 					<h1>Welcome to our Cake Shop</h1>
 					<a href="#">Order now</a>
 				</div>
 
-				<div class="section-hero-slide" style="background-image: url('images/hero_slide_2.png');">
+				<div class="section-hero-slide" style="background-image: url('img/hero_slide_2.png');">
 					<h4>LIFE IS SWEET</h4>
 					<h1>Life is short, eat cookies</h1>
 					<a href="#">Order now</a>
 				</div>
 
-				<div class="section-hero-slide" style="background-image: url('images/hero_slide_3.png');">
+				<div class="section-hero-slide" style="background-image: url('img/hero_slide_3.png');">
 					<h4>LIFE IS SWEET</h4>
 					<h1>We’ ll Make Memories Sweeter</h1>
 					<a href="#">Order now</a>
@@ -61,18 +59,18 @@
 					<h2>CHOOSE ONE FOR YOU</h2>
 					<a href="#" class="section-choose-box">
 						<div class="section-choose-img">
-							<img src="images/cake_1.png" alt="">
+							<img src="img/cake_1.png" alt="">
 							<span class="section-choose-img-text">Order now</span>
 						</div>
 						<div class="section-choose-text">
 							<h4>Chocolate gateau</h4>
-							<p>A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.</p>
+							<p>A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings. A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.</p>
 							<span>$35</span>
 						</div>
 					</a>
 					<a href="#" class="section-choose-box">
 						<div class="section-choose-img">
-							<img src="images/cake_2.png" alt="">
+							<img src="img/cake_2.png" alt="">
 							<span class="section-choose-img-text">Order now</span>
 						</div>
 						<div class="section-choose-text">
@@ -83,7 +81,7 @@
 					</a>
 					<a href="#" class="section-choose-box">
 						<div class="section-choose-img">
-							<img src="images/cake_3.png" alt="">
+							<img src="img/cake_3.png" alt="">
 							<span class="section-choose-img-text">Order now</span>
 						</div>
 						<div class="section-choose-text">
@@ -94,7 +92,7 @@
 					</a>
 					<a href="#" class="section-choose-box">
 						<div class="section-choose-img">
-							<img src="images/cake_4.png" alt="">
+							<img src="img/cake_4.png" alt="">
 							<span class="section-choose-img-text">Order now</span>
 						</div>
 						<div class="section-choose-text">
@@ -111,7 +109,7 @@
 					<h3>ABOUT US</h3>
 					<div class="section-about-box">
 						<div class="section-about-box-img">
-							<img src="images/cake_chef.png">
+							<img src="img/cake_chef.png">
 						</div>
 					</div>
 
@@ -119,7 +117,7 @@
 						<p>Cookies and cakes according to our grandmother's recipes. We use only natural ingredients, bought from domestic producers.</p>
 						<p>The milk that we put in the cakes is given by cows from mountain pastures. Only natural sweeteners are used, without processing. Also, we use only organic flour.</p>
 						<p>In our Cake Shop, everything is healthy, tasty and sweet. Come and see for yourself!</p>
-						<img class="section-about-text-img" src="images/cupcake.png">
+						<img class="section-about-text-img" src="img/cupcake.png">
 					</div>
 				</div>
 			</section>
@@ -136,14 +134,14 @@
 				</div>
 
 				<div class="section-images">
-					<a href="#"><img src="images/image_1.png"></a>
-					<a href="#"><img src="images/image_2.png"></a>
-					<a href="#"><img src="images/image_3.png"></a>
-					<a href="#"><img src="images/image_4.png"></a>
-					<a href="#"><img src="images/image_5.png"></a>
-					<a href="#"><img src="images/image_6.png"></a>
-					<a href="#"><img src="images/image_7.png"></a>
-					<a href="#"><img src="images/image_8.png"></a>
+					<a href="#"><img src="img/image_1.png"></a>
+					<a href="#"><img src="img/image_2.png"></a>
+					<a href="#"><img src="img/image_3.png"></a>
+					<a href="#"><img src="img/image_4.png"></a>
+					<a href="#"><img src="img/image_5.png"></a>
+					<a href="#"><img src="img/image_6.png"></a>
+					<a href="#"><img src="img/image_7.png"></a>
+					<a href="#"><img src="img/image_8.png"></a>
 				</div>
 			</section>
 
@@ -175,7 +173,7 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="footer-box footer-logo">
-					<a href="#"><img src="images/logo.png"></a>
+					<a href="#"><img src="img/logo.png"></a>
 				</div>
 
 				<div class="footer-box contact-us">
@@ -183,7 +181,7 @@
 					<address>
 						<p>Christopher Street <br>New York City,  NY 100012</p>
 						<p>Phone number: (212) 509-6995</p>
-						<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="images/contact.png"></a>
+						<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="img/contact.png"></a>
 					</address>				
 				</div>
 
@@ -195,10 +193,10 @@
 
 				<div class="footer-box follow-us">
 					<h5 class="footer-box-title">Follow Us</h5>
-					<a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png"></a>
-					<a href="#" target="_blank"><img src="images/instagram.png"></a>
-					<a href="#" target="_blank"><img src="images/twitter.png"></a>
-					<a href="#" target="_blank"><img src="images/pinterest-p.png"></a>
+					<a href="https://www.facebook.com" target="_blank"><img src="img/facebook.png"></a>
+					<a href="#" target="_blank"><img src="img/instagram.png"></a>
+					<a href="#" target="_blank"><img src="img/twitter.png"></a>
+					<a href="#" target="_blank"><img src="img/pinterest-p.png"></a>
 				</div>
 
 			</div>
