added basic global styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
+  <link href="link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,600i,700|Rochester" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -56,7 +57,7 @@
 
 			<section class="section-choose">
 				<div class="container">
-					<h2>CHOOSE ONE FOR YOU</h2>
+					<h2 class="title-section">CHOOSE ONE FOR YOU</h2>
 					<a href="#" class="section-choose-box">
 						<div class="section-choose-img">
 							<img src="img/cake_1.png" alt="">
@@ -106,7 +107,7 @@
 
 			<section class="section-about">
 				<div class="container">
-					<h3>ABOUT US</h3>
+					<h3 class="title-section">ABOUT US</h3>
 					<div class="section-about-box">
 						<div class="section-about-box-img">
 							<img src="img/cake_chef.png">
@@ -124,7 +125,7 @@
 
 			<section class="section-gallery">
 				<div class="container">
-					<h3>GALLERY</h3>
+					<h4 class="title-section">GALLERY</h4>
 					<div class="section-tabs">
 						<a href="index.html">Most Popular</a>
 						<a href="index.html">Wedding</a>
@@ -146,7 +147,7 @@
 			</section>
 
 			<section class="section-testimonials">
-				<h3>TESTIMONIALS</h3>
+				<h5 class="title-section">TESTIMONIALS</h5>
 				<div class="section-testimonial-slider">
 					<div class="testimonials-slide">
 						<h5 class="testimonials-slide-title">Ann Adams</h5>
