--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon1.ico">
   <!-- Place favicon.ico in the root directory -->
   <link href="link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,600i,700|Rochester" rel="stylesheet">
-
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -32,28 +32,26 @@
 				</nav>
 				<button class="burger"></button>
 			</div>
-		</header>
+		</header> <!-- .header -->
+
 		<main class="main">
 			<section class="section-hero js-hero-slider">
-
 				<div class="section-hero-slide" style="background-image: url('img/hero_slide_1.png');">
 					<h4>LIFE IS SWEET</h4>
 					<h1>Welcome to our Cake Shop</h1>
 					<a href="#">Order now</a>
 				</div>
-
 				<div class="section-hero-slide" style="background-image: url('img/hero_slide_2.png');">
 					<h4>LIFE IS SWEET</h4>
 					<h1>Life is short, eat cookies</h1>
 					<a href="#">Order now</a>
 				</div>
-
 				<div class="section-hero-slide" style="background-image: url('img/hero_slide_3.png');">
 					<h4>LIFE IS SWEET</h4>
 					<h1>We’ ll Make Memories Sweeter</h1>
 					<a href="#">Order now</a>
 				</div>
-			</section>
+			</section> <!-- .section-hero --> 
 
 			<section class="section-choose">
 				<div class="container">
@@ -103,7 +101,7 @@
 						</div>
 					</a>
 				</div>
-			</section>
+			</section> <!-- .section-choose -->
 
 			<section class="section-about">
 				<div class="container">
@@ -113,7 +111,6 @@
 							<img src="img/cake_chef.png">
 						</div>
 					</div>
-
 					<div class="section-about-text">
 						<p>Cookies and cakes according to our grandmother's recipes. We use only natural ingredients, bought from domestic producers.</p>
 						<p>The milk that we put in the cakes is given by cows from mountain pastures. Only natural sweeteners are used, without processing. Also, we use only organic flour.</p>
@@ -121,7 +118,7 @@
 						<img class="section-about-text-img" src="img/cupcake.png">
 					</div>
 				</div>
-			</section>
+			</section> <!-- .section-about -->
 
 			<section class="section-gallery">
 				<div class="container">
@@ -133,7 +130,6 @@
 						<a href="index.html">Cookies</a>
 					</div>
 				</div>
-
 				<div class="section-images">
 					<a href="#"><img src="img/image_1.png"></a>
 					<a href="#"><img src="img/image_2.png"></a>
@@ -144,7 +140,7 @@
 					<a href="#"><img src="img/image_7.png"></a>
 					<a href="#"><img src="img/image_8.png"></a>
 				</div>
-			</section>
+			</section> <!-- .section-gallery -->
 
 			<section class="section-testimonials">
 				<h5 class="title-section">TESTIMONIALS</h5>
@@ -168,8 +164,8 @@
 						</blockquote>
 					</div>
 				</div>
-			</section>
-		</main>
+			</section> <!-- .section-testimonials -->
+		</main> <!-- .main -->
 
 		<footer class="footer">
 			<div class="container">
@@ -185,13 +181,11 @@
 						<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="img/contact.png"></a>
 					</address>				
 				</div>
-
 				<div class="footer-box working-hours">
 					<h5 class="footer-box-title">Our Working Hours</h5>
 					<p><b>Monday - Friday</b> <br>8am - 9pm</p>
 					<p><b>Saturday - Sunday</b> <br>8am - 4pm</p>
 				</div>
-
 				<div class="footer-box follow-us">
 					<h5 class="footer-box-title">Follow Us</h5>
 					<a href="https://www.facebook.com" target="_blank"><img src="img/facebook.png"></a>
@@ -199,15 +193,14 @@
 					<a href="#" target="_blank"><img src="img/twitter.png"></a>
 					<a href="#" target="_blank"><img src="img/pinterest-p.png"></a>
 				</div>
-
 			</div>
-
 			<div class="footer-copyright">
 				<small class="footer-copyright-text">
 					© 2014 Copyright Text
 				</small>
 			</div>
-		</footer>
+		</footer> <!-- .footer -->
+
 		<!-- Scripts placed at the end of body for faster site load -->
 		<script src="js/vendor/modernizr-3.6.0.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
