--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon1.ico">
   <!-- Place favicon.ico in the root directory -->
-  <link href="link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,600i,700|Rochester" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,600i,700|Rochester" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
