burger btn completed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="container">
 				<a href="index.html"><img src="img/logo.png" alt="Cake Logo"></a>
 				<nav class="nav">
-					<ul class="unstyle-list">
+					<ul class="nav-list">
 						<li><a href="#">CHOOSE CAKE</a></li>
 						<li><a href="#">ABOUT</a></li>
 						<li><a href="#">GALLERY</a></li>
@@ -30,7 +30,10 @@
 					</ul>
 					<a href="#">CONTACT US</a>
 				</nav>
-				<button class="burger"></button>
+				<a class="burger">
+					<span></span>
+					<span></span>
+				</a>
 			</div>
 		</header> <!-- .header -->
 
