--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 	<body>
 		<header class="header">
 			<div class="container">
-				<a href="index.html"><img src="img/logo.png" alt="Cake Logo"></a>
-				<nav class="nav">
-					<ul class="nav-list">
-						<li><a href="#">CHOOSE CAKE</a></li>
-						<li><a href="#">ABOUT</a></li>
-						<li><a href="#">GALLERY</a></li>
-						<li><a href="#">TESTIMONIALS</a></li>
-					</ul>
-					<a href="#">CONTACT US</a>
-				</nav>
-				<a class="burger">
+				<a href="index.html" class="site-logo"><img src="img/logo.png" alt="Cake Logo"></a>
+				<a class="burger js-burger">
 					<span></span>
 					<span></span>
 				</a>
+				<nav class="nav js-nav">
+					<ul class="nav-list">
+						<li class="nav-list-item"><a href="#">CHOOSE CAKE</a></li>
+						<li class="nav-list-item"><a href="#">ABOUT</a></li>
+						<li class="nav-list-item"><a href="#">GALLERY</a></li>
+						<li class="nav-list-item"><a href="#">TESTIMONIALS</a></li>
+					</ul>
+					<a class="btn" href="#">CONTACT US</a>
+				</nav>
 			</div>
 		</header> <!-- .header -->
 
