banner in pogress

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon1.ico">
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,600i,700|Rochester" rel="stylesheet">
+  <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/plugins/slick-slider.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -40,25 +42,31 @@
 		<main class="main">
 			<section class="section-hero js-hero-slider">
 				<div class="section-hero-slide" style="background-image: url('img/hero_slide_1.png');">
-					<h4>LIFE IS SWEET</h4>
-					<h1>Welcome to our Cake Shop</h1>
-					<a href="#">Order now</a>
+					<div class="section-hero-slide-content">
+						<h4>LIFE IS SWEET</h4>
+						<h1>Welcome to our Cake Shop</h1>
+						<a href="#">Order now</a>
+					</div>
 				</div>
 				<div class="section-hero-slide" style="background-image: url('img/hero_slide_2.png');">
-					<h4>LIFE IS SWEET</h4>
-					<h1>Life is short, eat cookies</h1>
-					<a href="#">Order now</a>
+					<div class="section-hero-slide-content">
+						<h4>LIFE IS SWEET</h4>
+						<h1>Life is short, eat cookies</h1>
+						<a href="#">Order now</a>
+					</div>
 				</div>
 				<div class="section-hero-slide" style="background-image: url('img/hero_slide_3.png');">
-					<h4>LIFE IS SWEET</h4>
-					<h1>We’ ll Make Memories Sweeter</h1>
-					<a href="#">Order now</a>
+					<div class="section-hero-slide-content">
+						<h4>LIFE IS SWEET</h4>
+						<h1>We’ ll Make Memories Sweeter</h1>
+						<a href="#">Order now</a>
+					</div>
 				</div>
 			</section> <!-- .section-hero --> 
 
 			<section class="section-choose">
 				<div class="container">
-					<h2 class="title-section">CHOOSE ONE FOR YOU</h2>
+					<h2 class="title-section section-choose-title"><span>CHOOSE ONE FOR YOU</span></h2>
 					<a href="#" class="section-choose-box">
 						<div class="section-choose-img">
 							<img src="img/cake_1.png" alt="">
