--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<body>
 		<header class="header">
-			<div class="container">
+			<div class="header-container">
 				<a href="index.html" class="site-logo"><img src="img/logo.png" alt="Cake Logo"></a>
 				<a class="burger js-burger">
 					<span></span>
@@ -43,23 +43,23 @@
 			<section class="section-hero js-hero-slider">
 				<div class="section-hero-slide" style="background-image: url('img/hero_slide_1.png');">
 					<div class="section-hero-slide-content">
-						<h4>LIFE IS SWEET</h4>
-						<h1>Welcome to our Cake Shop</h1>
-						<a href="#">Order now</a>
+						<h4 class="section-hero__pretitle">LIFE IS SWEET</h4>
+						<h1 class="section-hero__title">Welcome to our Cake Shop</h1>
+						<a class="btn btn-solid section-hero__btn" href="#">Order now</a>
 					</div>
 				</div>
 				<div class="section-hero-slide" style="background-image: url('img/hero_slide_2.png');">
 					<div class="section-hero-slide-content">
-						<h4>LIFE IS SWEET</h4>
-						<h1>Life is short, eat cookies</h1>
-						<a href="#">Order now</a>
+						<h4 class="section-hero__pretitle">LIFE IS SWEET</h4>
+						<h1 class="section-hero__title">Life is short, eat cookies</h1>
+						<a class="btn btn-solid section-hero__btn" href="#">Order now</a>
 					</div>
 				</div>
 				<div class="section-hero-slide" style="background-image: url('img/hero_slide_3.png');">
 					<div class="section-hero-slide-content">
-						<h4>LIFE IS SWEET</h4>
-						<h1>We’ ll Make Memories Sweeter</h1>
-						<a href="#">Order now</a>
+						<h4 class="section-hero__pretitle">LIFE IS SWEET</h4>
+						<h1 class="section-hero__title">We’ ll Make Memories Sweeter</h1>
+						<a class="btn btn-solid section-hero__btn" href="#">Order now</a>
 					</div>
 				</div>
 			</section> <!-- .section-hero --> 
@@ -67,66 +67,92 @@
 			<section class="section-choose">
 				<div class="container">
 					<h2 class="title-section section-choose-title"><span>CHOOSE ONE FOR YOU</span></h2>
-					<a href="#" class="section-choose-box">
-						<div class="section-choose-img">
-							<img src="img/cake_1.png" alt="">
-							<span class="section-choose-img-text">Order now</span>
+					<div class="row">
+						<div class="section-choose-slider js-choose-slider">
+							<a href="#" class="section-choose-box section-choose-slide">
+								<div class="section-choose-img">
+									<img src="img/cake_1.png" alt="">
+									<span class="section-choose-img-text">Order now</span>
+								</div>
+								<div class="section-choose-text">
+									<h4>Chocolate gateau</h4>
+									<p>A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.</p>
+									<span>$35</span>
+								</div>
+							</a>
+							<a href="#" class="section-choose-box section-choose-slide">
+								<div class="section-choose-img">
+									<img src="img/cake_2.png" alt="">
+									<span class="section-choose-img-text">Order now</span>
+								</div>
+								<div class="section-choose-text">
+									<h4>Health cake</h4>
+									<p>This delicious cake is made with wholemeal flour, raw sugar and vegetable oil and packed with nutritious sultanas, sunflower seeds, honey and flaked almonds.</p>
+									<span>$5</span>
+								</div>
+							</a>
+							<a href="#" class="section-choose-box section-choose-slide">
+								<div class="section-choose-img">
+									<img src="img/cake_3.png" alt="">
+									<span class="section-choose-img-text">Order now</span>
+								</div>
+								<div class="section-choose-text section-choose-slide">
+									<h4>Teal butter cream cupcake</h4>
+									<p>Our elegantly decorated butter cream varieties are the perfect indulgence for your wedding or other special event.</p>
+									<span>$18</span>
+								</div>
+							</a>
+							<a href="#" class="section-choose-box section-choose-slide">
+								<div class="section-choose-img">
+									<img src="img/cake_4.png" alt="">
+									<span class="section-choose-img-text">Order now</span>
+								</div>
+								<div class="section-choose-text">
+									<h4>Mixed berry mousse cake</h4>
+									<p>Our pretty mixed berry mousse cake has a light texture and sweet fruity flavor. Topped with a strawberry glaze and a generous handful of fresh berries.</p>
+									<span>$30</span>
+								</div>
+							</a>
+							<a href="#" class="section-choose-box section-choose-slide">
+								<div class="section-choose-img">
+									<img src="img/cake_2.png" alt="">
+									<span class="section-choose-img-text">Order now</span>
+								</div>
+								<div class="section-choose-text">
+									<h4>Health cake</h4>
+									<p>This delicious cake is made with wholemeal flour, raw sugar and vegetable oil and packed with nutritious sultanas, sunflower seeds, honey and flaked almonds.</p>
+									<span>$5</span>
+								</div>
+							</a>
+							<a href="#" class="section-choose-box section-choose-slide">
+								<div class="section-choose-img">
+									<img src="img/cake_3.png" alt="">
+									<span class="section-choose-img-text">Order now</span>
+								</div>
+								<div class="section-choose-text section-choose-slide">
+									<h4>Teal butter cream cupcake</h4>
+									<p>Our elegantly decorated butter cream varieties are the perfect indulgence for your wedding or other special event.</p>
+									<span>$18</span>
+								</div>
+							</a>
 						</div>
-						<div class="section-choose-text">
-							<h4>Chocolate gateau</h4>
-							<p>A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings. A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.A luscious concoction comprising three layers of chocolate cream and topped with grated dark chocolate shavings.</p>
-							<span>$35</span>
-						</div>
-					</a>
-					<a href="#" class="section-choose-box">
-						<div class="section-choose-img">
-							<img src="img/cake_2.png" alt="">
-							<span class="section-choose-img-text">Order now</span>
-						</div>
-						<div class="section-choose-text">
-							<h4>Health cake</h4>
-							<p>This delicious cake is made with wholemeal flour, raw sugar and vegetable oil and packed with nutritious sultanas, sunflower seeds, honey and flaked almonds.</p>
-							<span>$5</span>
-						</div>
-					</a>
-					<a href="#" class="section-choose-box">
-						<div class="section-choose-img">
-							<img src="img/cake_3.png" alt="">
-							<span class="section-choose-img-text">Order now</span>
-						</div>
-						<div class="section-choose-text">
-							<h4>Teal butter cream cupcake</h4>
-							<p>Our elegantly decorated butter cream varieties are the perfect indulgence for your wedding or other special event.</p>
-							<span>$18</span>
-						</div>
-					</a>
-					<a href="#" class="section-choose-box">
-						<div class="section-choose-img">
-							<img src="img/cake_4.png" alt="">
-							<span class="section-choose-img-text">Order now</span>
-						</div>
-						<div class="section-choose-text">
-							<h4>Mixed berry mousse cake</h4>
-							<p>Our pretty mixed berry mousse cake has a light texture and sweet fruity flavor. Topped with a strawberry glaze and a generous handful of fresh berries.</p>
-							<span>$30</span>
-						</div>
-					</a>
+					</div>
 				</div>
 			</section> <!-- .section-choose -->
 
 			<section class="section-about">
 				<div class="container">
-					<h3 class="title-section">ABOUT US</h3>
-					<div class="section-about-box">
-						<div class="section-about-box-img">
+					<h3 class="title-section"><span>ABOUT US</span></h3>
+					<div class="section-about-holder row">
+						<div class="section-about-box-img section-about-box">
 							<img src="img/cake_chef.png">
 						</div>
-					</div>
-					<div class="section-about-text">
-						<p>Cookies and cakes according to our grandmother's recipes. We use only natural ingredients, bought from domestic producers.</p>
-						<p>The milk that we put in the cakes is given by cows from mountain pastures. Only natural sweeteners are used, without processing. Also, we use only organic flour.</p>
-						<p>In our Cake Shop, everything is healthy, tasty and sweet. Come and see for yourself!</p>
-						<img class="section-about-text-img" src="img/cupcake.png">
+						<div class="section-about-text section-about-box">
+							<p>Cookies and cakes according to our grandmother's recipes. We use only natural ingredients, bought from domestic producers.</p>
+							<p>The milk that we put in the cakes is given by cows from mountain pastures. Only natural sweeteners are used, without processing. Also, we use only organic flour.</p>
+							<p>In our Cake Shop, everything is healthy, tasty and sweet. Come and see for yourself!</p>
+							<img class="section-about-text-img" src="img/cupcake.png">
+						</div>
 					</div>
 				</div>
 			</section> <!-- .section-about -->
