Testimonials section completed

--- a/index.html
+++ b/index.html
@@ -180,25 +180,31 @@
 			</section> <!-- .section-gallery -->
 
 			<section class="section-testimonials">
-				<h5 class="title-section">TESTIMONIALS</h5>
-				<div class="section-testimonial-slider">
+				<h5 class="title-section"><span>TESTIMONIALS</span></h5>
+				<div class="section-testimonial-slider js-testimonial-slider">
 					<div class="testimonials-slide">
-						<h5 class="testimonials-slide-title">Ann Adams</h5>
-						<blockquote class="testimonials-slide-text">
-							<i>Just wanted to say thank you for everything. Everyone loved loved the cake and said how delicious it was.</i>
-						</blockquote>
+						<div class="testimonials-slide__holder">
+							<h5 class="testimonials-slide-title"><span>Ann Adams</span></h5>
+							<blockquote class="testimonials-slide-text">
+								<i>Just wanted to say thank you for everything. Everyone loved loved the cake and said how delicious it was.</i>
+							</blockquote>
+						</div>
 					</div>
 					<div class="testimonials-slide">
-						<h5 class="testimonials-slide-title">Kelly Smith</h5>
-						<blockquote class="testimonials-slide-text">
-							<i>The cake you made for our wedding was even more beautiful than we imagined. Thank you for making our dream come true</i>
-						</blockquote>
+						<div class="testimonials-slide__holder">
+							<h5 class="testimonials-slide-title"><span>Kelly Smith</span></h5>
+							<blockquote class="testimonials-slide-text">
+								<i>The cake you made for our wedding was even more beautiful than we imagined. Thank you for making our dream come true</i>
+							</blockquote>
+						</div>
 					</div>
 					<div class="testimonials-slide">
-						<h5 class="testimonials-slide-title">John Lawson</h5>
-						<blockquote class="testimonials-slide-text">
-							<i>Words cannot express how grateful we are to you. The cake you make our sons first birthday was amazing.</i>
-						</blockquote>
+						<div class="testimonials-slide__holder">
+							<h5 class="testimonials-slide-title"><span>John Lawson</span></h5>
+							<blockquote class="testimonials-slide-text">
+								<i>Words cannot express how grateful we are to you. The cake you make our sons first birthday was amazing.</i>
+							</blockquote>
+						</div>
 					</div>
 				</div>
 			</section> <!-- .section-testimonials -->
